# ONSdigital.eq-cir-fastapi

./: Makefile  pyproject.toml
app/: dependencies.py
app/events/: publisher.py
app/repositories/buckets/: bucket_loader.py  ci_schema_bucket_repository.py
app/repositories/firebase/: ci_firebase_repository.py  firebase_loader.py
app/routers/: ci_router.py  ci_router_restful.py  validator_router.py  validator_router_restful.py
app/services/: ci_processor_service.py
tests/: test_http_post_ci_v3.py
tests/test_data/: ci_test_data.py
tests/unit_tests/: conftest.py
tests/unit_tests/endpoints/: test_http_delete_ci_v1_restful.py  test_http_get_ci_metadata_v1_restful.py  test_http_get_ci_metadata_v2_restful.py  test_http_get_ci_schema_v1_restful.py  test_http_get_ci_schema_v2_restful.py  test_http_get_ci_validator_metadata_v1.py  test_http_get_status.py  test_http_post_ci_v3_restful.py  test_http_post_ci_v3_restful_unhappy.py
tests/unit_tests/endpoints/deprecate/: test_http_post_ci_v3.py
tests/unit_tests/endpoints/validator/: test_http_put_validator_version_v1_restful.py
tests/unit_tests/repositories/: test_ci_firebase_repository.py
